--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "jspreadsheet-ce": "^5.0.4",
+    "jsuites": "^6.0.1",
     "mysql2": "^3.15.3",
-    "next": "15.5.0",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
